	* il_manip.c: Cleared up some minor formatting issues.
	* il_png.c (iSavePngInternal): Fixed bug #1680577 (some metadata not written correctly).
	* il_nvidia.cpp (ilnVidiaCompressDXT1): Disabled mipmap generation and added code to
	ilOutputHandler constructor to determine the proper size of the buffer.
	* il.h: Added IL_DXT1A define for nVidia Texture Tools.
	* il_nvidia.cpp: Added DXT1a, DXT3 and DXT5 support.  Renamed ilnVidiaCompressDXT to
	ilnVidiaCompressDXT and added the DxtType parameter.
	* il_internal.c: Cleaned up extra whitespace toward end.
	
2009-01-08 Denton Woods <doomwiz@users.sf.net>
	* opengl_example/gltest.c (main): Added iluInit/ilutInit calls.
	* ilut_opengl.c (ilutGLFormat): Added IL_ALPHA support.
	* il_bmp.c: Minor formatting issues fixed.
	* il.h: Added IL_NVIDIA_COMPRESS #define.
	* il_states.h: Added ilUseNVidiaDXT to IL_STATES.
	* il_state.c: Added IL_NVIDIA_COMPRESS support.
	* il_dds-save.c (Compress): Changed to use NVTT if needed.
	* il_nvidia.cpp: Added ilNVidiaCompressDXTFile and Depth parameter to ilNVidiaCompressDXT.

2009-01-08 Matěj Týč <bubla@sf.net>
	* TODO: Added some tasks that I would like to undertake
	* ChangeLog, NEWS: Copied old ChangeLog entries to NEWS file
	* lib/Makefile.am: Added two new files to the list of IL sources
	(il_sun.c, il_nvidia.cpp)
	* examples/iller: Made empty files where the ILU frontend will be in
	the future.
	* configure.ac, m4/devil-reports.m4: Put the report stage of the
	configure script to a separate m4 file.

2009-01-09 Denton Woods <doomwiz@users.sf.net>
	* ilut_opengl.h: Moved ILGLCOMPRESSEDTEXIMAGE2DARBPROC typedef out of #ifdefs.
	* ilut_opengl.c: Added ilutGLSetTex2D and ilutGLSetTex3D.  Changed ilutGLSetTex to
	just call ilutGLSetTex2D.  Did the same thing for ilutGLSubTex.  Added checks for 
	volume image extensions.  Renamed MakeGLCompliant to MakeGLCompliant2D.  Added
	MakeGLCompliant3D.
	* ilut_opengl.c (ilutGLScreen): Added check for ilTexImage failing.